blog work nearly complete, working on load github events into site

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ requests = "*"
 google-cloud-firestore = "*"
 python-decouple = "*"
 python-dotenv = "*"
+firebase-admin = "*"
 
 [requires]
 python_version = "3.6"
