--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ google-cloud-firestore = "*"
 python-decouple = "*"
 python-dotenv = "*"
 firebase-admin = "*"
+papermill = {extras = ["s3"],version = "*"}
 
 [requires]
 python_version = "3.6"
