--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,86 @@
+ansiwrap==0.8.4
+attrs==19.1.0
+backcall==0.1.0
+bleach==3.1.0
+boto3==1.9.152
+botocore==1.12.152
 CacheControl==0.12.5
 cachetools==3.1.0
 certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
+decorator==4.4.0
+defusedxml==0.6.0
+docutils==0.14
+entrypoints==0.3
 firebase-admin==2.16.0
-Flask==1.0.2
-google-api-core==1.10.0
+Flask==1.0.3
+future==0.17.1
+google-api-core==1.11.0
 google-auth==1.6.3
-google-cloud-core==0.29.1
-google-cloud-firestore==1.1.0
-google-cloud-storage==1.15.0
+google-cloud-core==1.0.0
+google-cloud-firestore==1.2.0
+google-cloud-storage==1.16.0
 google-resumable-media==0.3.2
 googleapis-common-protos==1.5.10
 grpcio==1.20.1
 gunicorn==19.9.0
 idna==2.8
+ipykernel==5.1.1
+ipython==7.5.0
+ipython-genutils==0.2.0
+ipywidgets==7.4.2
 itsdangerous==1.1.0
+jedi==0.13.3
 Jinja2==2.10.1
+jmespath==0.9.4
+jsonschema==3.0.1
+jupyter==1.0.0
+jupyter-client==5.2.4
+jupyter-console==6.0.0
+jupyter-core==4.4.0
 MarkupSafe==1.1.1
+mistune==0.8.4
 msgpack==0.6.1
-oauthlib==3.0.1
+nbconvert==5.5.0
+nbformat==4.4.0
+notebook==5.7.8
+numpy==1.16.3
+pandas==0.24.2
+pandocfilters==1.4.2
+papermill==1.0.0
+parso==0.4.0
+pexpect==4.7.0
+pickleshare==0.7.5
+prometheus-client==0.6.0
+prompt-toolkit==2.0.9
 protobuf==3.7.1
+ptyprocess==0.6.0
 pyasn1==0.4.5
 pyasn1-modules==0.2.5
-PySocks==1.6.8
+Pygments==2.4.0
+pyrsistent==0.15.2
+python-dateutil==2.8.0
 python-decouple==3.1
-python-dotenv==0.10.1
+python-dotenv==0.10.2
 pytz==2019.1
-requests==2.21.0
-requests-oauthlib==1.2.0
+PyYAML==5.1
+pyzmq==18.0.1
+qtconsole==4.4.4
+requests==2.22.0
 rsa==4.0
+s3transfer==0.2.0
+Send2Trash==1.5.0
 six==1.12.0
-urllib3==1.24.2
-Werkzeug==0.15.2
+tenacity==5.0.4
+terminado==0.8.2
+testpath==0.4.2
+textwrap3==0.9.2
+tornado==6.0.2
+tqdm==4.32.1
+traitlets==4.3.2
+urllib3==1.24.3
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.15.4
+widgetsnbextension==3.4.2
